style.css
html, body {
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
    font-family: 'Comfortaa', cursive;
}
/* Small Devices sm */
@media (min-width: 5px) {
   

    /* Nav Section sm */
    .nav {
        align-items: center;
        height: 10vh;
        background-color: #ffffff;
        box-sizing: border-box;
        font-family: 'Quicksand', sans-serif;
        font-size: 17px;
    }

    .nav-link {
        color: black;
    }

    
    /* Banner Section */
   .banner-container {
       display: flex;
       align-items: center;
       justify-content: center;
       background-image: url('./bannerDay.png');
       background-size: fill;
       background-repeat: no-repeat;
       height: 850px;
       box-sizing: border-box;
   }

   .banner-box1 {
      height: 300px;
      background-color: #e66245;
      border: 3px solid rgb(252, 223, 181);
      border-radius: 4%;
       color: rgb(255, 255, 255);
   }

   .box1-content {
       display: flex;
       justify-content: center;
       margin-top: 20px; 
   }

   #head-name {
    font-family: 'Comfortaa', cursive;
    color: blanchedalmond;
    font-size: 50px;
   }

   #head-title {
    font-family: 'Prompt', sans-serif;
    color: rgb(252, 241, 224);
   }

   .mainButtons {
       margin-top: 30px;
       margin-left: 20px;
       background-color: #1b3a63;
   }

   

   
   

   /* About Me Section sm */
   .about-me-container {
       align-items: center;
       background-color: #e19a59;
       height: 400px;
       box-sizing: border-box;
       
   }

   .about-head-text {
       display: flex;
       justify-content: center;
       margin-bottom: 30px;
       font-family: 'Comfortaa', cursive;
       color: white;
   }

   .about-text {
       display: flex;
       justify-content: center;
       text-align: center;
       font-family: 'Comfortaa', cursive;
       margin-left: 20px;
       margin-right: 20px;
       color: white;
       
   }

   /* My Experience Section */
   .my-experience-container {
    background-color: #1b3a63;
    box-sizing: border-box;
    height: 300px;
    }

    .my-experience-head-text {
    display: flex;
    justify-content: center;
    font-family: 'Comfortaa', cursive;
    margin-top: 40px;
    margin-left: 20px;
    margin-bottom: 40px;
    color: blanchedalmond;
    }

    .my-experience-text {
        display: flex;
        justify-content: center;
        font-family: 'Comfortaa', cursive;
        text-align: center;
        margin-left: 20px;
        color: blanchedalmond;
    }



   /* Cards Section */
   .card-1 {
       min-height: 200px;
       max-height: 200px;
       object-fit: contain;
   }

   .card-2 {
       min-height: 200px;
       max-height: 200px;
       object-fit: contain;
   }

   .card-title {
       display: flex;
       justify-content: center;
       font-family: 'Comfortaa', cursive;
   }

   .card-image-top {
       background-size: fill;
   }

   .card-text {
    font-family: 'Comfortaa', cursive;
   }

   /* Portfolio Section */

    .portfolio-container {
    background-color: #e66245;
    
    }

    .portfolio-images {
        min-height: 200px;
        max-height: 200px;
        object-fit: contain;
    }

   .portfolio-head-text {
       display: flex;
       justify-content: center;
       padding-top: 100px;
       padding-bottom: 30px;
       font-family: 'Comfortaa', cursive;
       color: blanchedalmond;
   }

   .portfolio-text {
       display: flex;
       justify-content: center;
       text-align: center;
       font-family: 'Comfortaa', cursive;
       margin-bottom: 30px;
       color: blanchedalmond;
       
   }

   .portfolio-card-text {
    display: flex;
    justify-content: center;
    text-align: center;
    font-family: 'Comfortaa', cursive;
    margin-bottom: 30px;
    color: black;
    
}

   /* Footer Section*/
   .footer {
       height: 300px;
       background-color: #315cd3;
   }

   .footer-head {
       display: flex;
       justify-content: center;
       font-family: 'Comfortaa', cursive;
       margin-top: 100px;
       color: white;
   }

   .footer-email {
    color: #f7e225;
    display: flex;
    justify-content: center;
    font-family: 'Comfortaa', cursive;
    }

    .footer-phone {
    color: white;
    display: flex;
    justify-content: center;
    font-family: 'Comfortaa', cursive;
    }

}


/* Medium Devices */
@media (min-width: 576px) {
   .banner-container {
       box-sizing: border-box;
       background-image: url('./bannerDay.png');
       background-size: cover;
       background-repeat: no-repeat;
   }



   /* Portfolio Section */
   .portfolio-container {
    background-color: #e66245;
    }

    .card-columns {
     
    }


    
}

















/* Large Devices */
@media (min-width: 992px) {
 .banner-container {
     box-sizing: border-box;
    background-image: url('./bannerDay.png');
    background-size: cover;
  
 }
}

/* Extra Large Devices */
@media (min-width: 1200px) {
    .banner-container {
        background-color: yellow;
    }
}

